resources/argo/argo-workflow-http-proxy.in.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: argo-workflow-httpproxy
  namespace: jupyterflow
spec:
  routes:
    - conditions:
        - prefix: /
      services:
        - name: argo-server
          port: 2746
  virtualhost:
    fqdn: argo-workflows.${DATA_E2E_BASE_URL}
